# ppt-gen

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
data/: quarterly.csv  regions.csv
decks/: SLIDES_LICENSE  quarterly-report.md
docs/: article.md
mermaid/: architecture.mmd
plots/: __init__.py  revenue_trend.py
ppt_gen/: __init__.py  __main__.py  brand.py  build.py  cache.py  helpers.py  mermaid.py  paths.py  preprocess.py  registry.py  save.py  slide_context.py  style.py  table.py
ppt_gen/theme/: __init__.py  __main__.py  compile.py  tokens.py
themes/scientific/: mermaid.json  plot.mplstyle  theme.css  tokens.yaml
