[project]
name = "ppt-gen"
version = "0.1.0"
description = "Unified design-system layer for Marp decks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "seaborn>=0.13",
    "tabulate>=0.9",
]

[project.scripts]
ppt-gen = "ppt_gen.build:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ppt_gen*"]
